<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>widget_Axis_AP</class>
 <widget class="QWidget" name="widget_Axis_AP">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>362</width>
    <height>224</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>X_axis,Y_axis</string>
  </property>
  <property name="windowIcon">
   <iconset resource="../resources/apprcc.qrc">
    <normaloff>:/APThrehold_icon.png</normaloff>:/APThrehold_icon.png</iconset>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_3">
   <item>
    <layout class="QVBoxLayout" name="verticalLayout_x">
     <item>
      <widget class="QLabel" name="label_X_axis">
       <property name="text">
        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;X_axis&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_x">
       <item>
        <widget class="QComboBox" name="comboBox_X_axis_main"/>
       </item>
       <item>
        <widget class="QComboBox" name="comboBox_X_axis_sub"/>
       </item>
      </layout>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QVBoxLayout" name="verticalLayout_y">
     <item>
      <widget class="QLabel" name="label_Y_axis">
       <property name="text">
        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;Y_axis&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_y">
       <item>
        <widget class="QComboBox" name="comboBox_Y_axis_main"/>
       </item>
       <item>
        <widget class="QComboBox" name="comboBox_Y_axis_sub"/>
       </item>
      </layout>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QVBoxLayout" name="verticalLayout_label">
     <item>
      <widget class="QLabel" name="label_label">
       <property name="text">
        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;Label&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLineEdit" name="lineEdit_label"/>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_button">
     <item>
      <widget class="QPushButton" name="pushButton_Save">
       <property name="text">
        <string>Save</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="pushButton_Cancel">
       <property name="text">
        <string>Cancel</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources>
  <include location="../resources/apprcc.qrc"/>
 </resources>
 <connections/>
</ui>
